--- a/Ej-13/menu.ini
+++ b/Ej-13/menu.ini
@@ -1,15 +1,11 @@
-[Entrada]
-opcion1 = Ensalada
-opcion2 = Sopa
+[entrada]
+opcion1 = Snacks
 
-[PlatoPrincipal]
+[plato_principal]
 opcion1 = Milanesa
-opcion2 = Pasta
 
-[Acompanamiento]
-opcion1 = Puré
-opcion2 = Papas fritas
+[acompanamiento]
+opcion1 = Papas fritas
 
-[Postre]
+[postre]
 opcion1 = Helado
-opcion2 = Fruta
